--- a/app/src/main/res/layout/fragment_video_dialog.xml
+++ b/app/src/main/res/layout/fragment_video_dialog.xml
@@ -8,16 +8,28 @@
     tools:context=".VideoDialogFragment">
 
     <!-- TODO: Update blank fragment layout -->
-
-    <Button
-        android:id="@+id/VideoCloseBtn"
+    <com.balysv.materialripple.MaterialRippleLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Fermer" />
+        android:layout_height="wrap_content">
 
+        <Button
+            android:id="@+id/VideoCloseBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/transparent"
+            android:drawableEnd="@drawable/ic_clear_color"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:text="Fermer"
+            android:textColor="@color/colorRed" />
+    </com.balysv.materialripple.MaterialRippleLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <VideoView
         android:id="@+id/VideoPlayer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    </FrameLayout>
 
 </LinearLayout>
