--- a/app/src/main/res/layout/option_edit_element.xml
+++ b/app/src/main/res/layout/option_edit_element.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:paddingEnd="7dp"
+    android:paddingStart="7dp"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -18,11 +20,12 @@
             android:layout_weight="1" />
 
         <ImageButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_delete"
             android:id="@+id/sondage_edit_option_delete"
-            android:layout_weight="2" />
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@color/common_google_signin_btn_text_light_disabled"
+            android:src="@drawable/ic_delete"
+            android:tint="@color/colorRed" />
     </LinearLayout>
 
     <EditText
@@ -49,13 +52,17 @@
 
         <Button
 
+            android:id="@+id/sondage_edit_option_upload_btn"
+            style="@style/Widget.AppCompat.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:drawableTop="@drawable/ic_file_upload"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/button_border"
+            android:drawableTop="@drawable/ic_file_upload_color"
+            android:padding="10dp"
             android:text="Télécharger"
-            android:id="@+id/sondage_edit_option_upload_btn"
-            android:layout_weight="1" />
+            android:textColor="@color/colorPrimary" />
 
 
 
